--- a/fimco/pochi/templates/dashboard.html
+++ b/fimco/pochi/templates/dashboard.html
@@ -40,36 +40,6 @@
 								<span>POCHI</span>
 							</a>
 						</li>
-						<li>
-							<a href="#">
-								<i class="fa fa-menu-arrow pull-right"></i>
-								<i class="main-icon fa fa-bar-chart-o"></i> <span>Item 1</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<i class="fa fa-menu-arrow pull-right"></i>
-								<i class="main-icon fa fa-table"></i> <span>Item 2</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<i class="fa fa-menu-arrow pull-right"></i>
-								<i class="main-icon fa fa-pencil-square-o"></i> <span>Item 3</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<i class="fa fa-menu-arrow pull-right"></i>
-								<i class="main-icon fa fa-gears"></i> <span>Item 4</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<i class="fa fa-menu-arrow pull-right"></i>
-								<i class="main-icon fa fa-book"></i> <span>Item 5</span>
-							</a>
-						</li>
 					</ul>
 
 					<!-- SECOND MAIN LIST -->
@@ -77,14 +47,44 @@
 					<ul class="nav nav-list">
 						<li>
 							<a href="">
-								<i class="main-icon fa fa-money"></i>
-								<span class="label label-success pull-right">2</span> <span>Currency</span>
+								<i class="main-icon fa fa-cart-arrow-down"></i>
+								<span class="label label-success pull-right">2</span> <span>Markets Home</span>
 							</a>
 						</li>
 						<li>
 							<a href="">
 								<i class="main-icon fa fa-exchange"></i>
 								<span class="label label-danger pull-right">PRO</span> <span>Exchange Rates</span>
+							</a>
+						</li>
+                        <li>
+							<a href="#">
+								<i class="fa fa-menu-arrow pull-right"></i>
+								<i class="main-icon fa fa-bar-chart-o"></i> <span>Interests Rates</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fa fa-menu-arrow pull-right"></i>
+								<i class="main-icon fa fa-table"></i> <span>Share Prices</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fa fa-menu-arrow pull-right"></i>
+								<i class="main-icon fa fa-pencil-square-o"></i> <span>Macro Data</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fa fa-menu-arrow pull-right"></i>
+								<i class="main-icon fa fa-gift"></i> <span>Auction Data</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fa fa-menu-arrow pull-right"></i>
+								<i class="main-icon fa fa-money"></i> <span>Commodity Prices</span>
 							</a>
 						</li>
 					</ul>
