--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -22,8 +22,8 @@
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker3.standalone.min.css">
-    <link rel="stylesheet" href="static/css/header-1.css">
-    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="/static/css/header-1.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 
     {% block links %}
     {% endblock %}
@@ -69,7 +69,7 @@
 
                 <!-- Logo -->
                 <a class="logo float-left" href="index.html">
-                    <img src="static/img/fimco_logo.png" alt="" />
+                    <img src="/static/img/fimco_logo.png" alt="" />
                 </a>
 
                 <div class="navbar-collapse collapse nav-main-collapse">
@@ -126,8 +126,8 @@
 
 
 <!-- JAVASCRIPT FILES -->
-    <script type="text/javascript" src="static/js/vendors/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="static/js/modified.js"></script>
+    <script type="text/javascript" src="/static/js/vendors/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="/static/js/modified.js"></script>
     {% block scripts %}
     {% endblock %}
 </body>
