--- a/fimco/pochi/static/pochi/css/dashboard.css
+++ b/fimco/pochi/static/pochi/css/dashboard.css
@@ -44,7 +44,7 @@ body{
     filter: alpha(opacity=100);
     color: #fff;
 }
-.card .btn {
+.card .btn, .card-1 .btn {
     font-weight: bold;
 }
 .btn-neutral {
@@ -96,24 +96,9 @@ body{
     margin-right: auto;
     cursor: pointer;
 }
-.card[data-color="black"] {
-    background: #0066cc;
-    background: radial-gradient(ellipse at center, #3399FF 0%, #0066cc 100%);
-    background-size: 250% 250%;
-}
-.card[data-color="purple"] {
-    background: #0070e0;
-    background: radial-gradient(ellipse at center, #001754 0%, #47A3FF 100%);
-    background-size: 250% 250%;
-}
-.card[data-color="blue"] {
-    background: #002A54;
-    background: radial-gradient(ellipse at center, #001754 0%, #002A54 100%);
-    background-size: 250% 250%;
-}
-.card[data-color="navy"] {
+.card[data-color="navy"], .card-1[data-color="navy"] {
     background: #70B8FF;
-    background: radial-gradient(ellipse at center, #001754 0%, #70B8FF 100%);
+    background: radial-gradient(ellipse at center, #002952 0%, #70B8FF 100%);
     background-size: 250% 250%;
 }
 .card .footer {
@@ -128,7 +113,7 @@ body{
     padding: 50px 65px;
     text-align: center;
 }
-.card h4 {
+.card h4, .card-1 h4 {
     color: #fff;
     font-size: 24px;
     line-height: 30px;
@@ -140,14 +125,15 @@ body{
     font-weight: 600;
     text-transform: uppercase;
 }
-.card p {
+.card p, .card-1 p {
     line-height: 1.3;
 }
-.card .title {
+.card .title, .card-info .title {
     position: relative;
     z-index: 3;
 }
-.card > .title {
+.card > .title, .card-info .title {
+    color: #ffffff;
     margin: 0;
     padding: 30px 0 0;
 }
@@ -214,7 +200,7 @@ body{
 .card[data-background="image"].card-with-border:after, .card[data-background="color"].card-with-border:after {
     border: 1px solid rgba(255, 255, 255, 0.45);
 }
-.card.card-with-border:after {
+.card-with-border:after {
     position: absolute;
     display: block;
     width: calc(100% - 10px);
@@ -222,7 +208,7 @@ body{
     content: "";
     top: 5px;
     left: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.15);
+    border: 1px solid rgba(255, 255, 255, 0.75);
     z-index: 1;
     border-radius: 5px;
 }
@@ -230,7 +216,7 @@ body{
 /*********************************Other Cards*********************************/
 
 .card-wrap {
-  margin: 10px;
+  /*margin: 10px;*/
     text-align: -webkit-center;
     font-size: 14px;
     font-weight: 500;
@@ -279,7 +265,7 @@ body{
   background-color: #333;
   overflow: hidden;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px, inset rgba(255, 255, 255, 0.5) 0 0 0 6px;
+  /*box-shadow: rgba(0, 0, 0, 0.66) 0 30px 60px 0, inset #333 0 0 0 5px, inset rgba(255, 255, 255, 0.5) 0 0 0 6px;*/
   -webkit-transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
   transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
@@ -287,8 +273,6 @@ body{
 .card-bg {
   opacity: 0.5;
   position: absolute;
-  /*top: -20px;*/
-  /*left: -20px;*/
   width: 100%;
   height: 100%;
   padding: 20px;
@@ -344,9 +328,8 @@ body{
   color: #fff;
   text-shadow: rgba(0, 0, 0, 0.5) 0 10px 10px;
 }
-#daily {
-    background-color: #0066cc;
-}
-#monthly {
-    background-color: #3399ff;
+
+canvas{
+    position: relative;
+    width:80vw
 }
