--- a/fimco/pochi/templates/admin.html
+++ b/fimco/pochi/templates/admin.html
@@ -1,7 +1,5 @@
 {% extends "dashboard.html" %}
 {% block content %}
-    {% include 'balance.html' %}
-    {% include 'daily.html' %}
     <section id="middle">
         <div id="content" class="dashboard padding-20">
             <!-- /BOXES -->
@@ -9,7 +7,7 @@
                 <div id="grid" data-columns>
                     <!-- BOX -->
                     <div class="card-box">
-                        <div class="card card-with-border" data-color="purple">
+                        <div class="card card-with-border" data-color="navy">
                             <div class="content text-center">
                                 <h4 class="title text-center">Balance</h4>
                                 <p class="description">View your balance(Principal only)</p>
@@ -22,80 +20,84 @@
                                     My balance
                                 </button>
                             </div>
-                        </div> <!-- end card -->
-                    </div>
-                    <!-- /BOX -->
-                    <!-- BOX -->
-                    <div class="card-box">
-                        <div class="card card-with-border card-just-text"
-                             data-background="color"
-                             data-color="black" >
-                            <div class="content">
-                                <h4 class="title">Total Earnings (CUMULATIVE) since the beginning of time</h4>
-                            </div>
-                            <div class="footer btn-center">
-                                <button id="total"
-                                        class="btn btn-neutral btn-fill btn-modern"
-                                        onclick="startActivity('total')">
-                                    View Earnings
-                                </button>
-                            </div>
-                        </div> <!-- end card -->
-                    </div>
-                    <!-- /BOX -->
-                    <!-- BOX -->
-                    <div class="card-wrap">
-                        <div class="card-1">
-                            <div class="card-bg" id="daily"></div>
-                            <div class="card-info">
-                                <h1>Daily</h1>
-                                <p>Daily earnings, interest as of yesterday.</p>
-                                <button id="d_earn"
-                                        class="btn btn-neutral btn-fill btn-modern"
-                                        data-toggle="modal"
-                                        data-target="#dailyModal">
-                                    View Earnings
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /BOX -->
-                    <!-- BOX -->
-                    <div class="card-box">
-                        <div class="card text-center" data-color="navy">
-                            <h4 class="title title-modern">POCHI Rate</h4>
-                            <div class="content">
-                                   <div class="price">
-                                    <h6>From</h6>
-                                    <h4>10<b class="currency">%</b></h4>
-                                </div>
-                            </div>
-                            <div class="footer btn-center">
-                                <button id="rate"
-                                        class="btn btn-neutral btn-round btn-modern"
-                                        onclick="startActivity('rate')">
-                                    See Rates
-                                </button>
-                            </div>
-
                             <div class="filter filter-blue"></div>
                         </div> <!-- end card -->
                     </div>
                     <!-- /BOX -->
                     <!-- BOX -->
+                    <div class="card-box">
+                        <div class="card card-with-border text-center" data-color="navy">
+                            <h4 class="title title-modern">POCHI Rate</h4>
+                            <div class="content">
+                                <div class="price">
+                                    <h6>From</h6>
+                                    <h4>10<b class="currency">%</b></h4>
+                                </div>
+                            </div>
+                            <div class="footer btn-center">
+                                <a id="rate" class="btn btn-neutral btn-round btn-modern" href="{% url 'rates' %}">
+                                    See Rates
+                                </a>
+                            </div>
+                            <div class="filter filter-blue"></div>
+                        </div>
+                    </div>
+                    <!-- /BOX -->
+                    <!-- BOX -->
                     <div class="card-wrap">
-                        <div class="card-1">
-                            <div class="card-bg" id="monthly"></div>
+                        <div class="card-1 card-with-border"
+                             data-color="navy"
+                             data-toggle="modal"
+                             data-target="#dailyModal">
+                            <div class="card-bg" id="daily"></div>
                             <div class="card-info">
-                                <h1>Monthly</h1>
-                                <p>Monthly earnings, See monthly earnings for the whole year.</p>
-                                <button id="m_earn"
-                                        class="btn btn-neutral btn-fill btn-modern"
-                                        onclick="startActivity('m_earn')">
+                                <h4 class="title title-modern">Daily</h4>
+                                <p>Daily earnings, interest as of yesterday.</p>
+                                <button id="d_earn"
+                                        class="btn btn-neutral btn-fill btn-modern">
                                     View Earnings
                                 </button>
                             </div>
+                            <div class="filter filter-blue"></div>
                         </div>
+                    </div>
+                    <!-- /BOX -->
+                    <!-- BOX -->
+                    <div class="card-wrap">
+                        <div class="card-1 card-with-border"
+                             data-color="navy"
+                             data-toggle="modal"
+                             data-target="#monthlyModal">
+                            <div class="card-bg" id="monthly"></div>
+                            <div class="card-info">
+                                <h4 class="title title-modern">Monthly</h4>
+                                <p>Monthly earnings, See monthly earnings for the whole year.</p>
+                                <button id="m_earn"
+                                        class="btn btn-neutral btn-fill btn-modern">
+                                    View Earnings
+                                </button>
+                            </div>
+                            <div class="filter filter-blue"></div>
+                        </div>
+                    </div>
+                    <!-- /BOX -->
+                    <!-- BOX -->
+                    <div class="card-box">
+                        <div class="card card-with-border" data-color="navy">
+                            <div class="content text-center">
+                                <h4 class="title text-center"> Total Earnings</h4>
+                                <p class="description"> Cumulative earnings since the beginning of time</p>
+                            </div>
+                            <div class="footer btn-center">
+                                <button id="earnings"
+                                        class="btn btn-neutral btn-round btn-modern"
+                                        data-toggle="modal"
+                                        data-target="#earningsModal">
+                                    View Earnings
+                                </button>
+                            </div>
+                            <div class="filter filter-blue"></div>
+                        </div> <!-- end card -->
                     </div>
                     <!-- /BOX -->
                 </div>
