--- a/fimco/pochi/templates/balance.html
+++ b/fimco/pochi/templates/balance.html
@@ -1,17 +1,12 @@
-<div class="modal fade" id="balanceModal" tabindex="-1" role="dialog" aria-labelledby="balanceModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
-                <h4 class="modal-title">My Balance</h4>
-            </div>
-            <div class="modal-body">
-                <p>Tshs. 3,500,000</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+{% extends "dashboard.html" %}
+{% block content %}
+    <section id="middle">
+        <div id="content" class="dashboard padding-20">
+
         </div>
-    </div>
-</div>
+    </section>
+{% endblock %}
+
+{% block scripts %}
+
+{% endblock %}
