--- a/fimco/pochi/templates/daily.html
+++ b/fimco/pochi/templates/daily.html
@@ -1,23 +1,12 @@
-<div class="modal fade" id="dailyModal" tabindex="-1" role="dialog" aria-labelledby="dailyModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
-                <h4 class="modal-title">My Daily Earnings</h4>
-            </div>
-            <div class="modal-body">
-                <div class="chart-container" style="position: relative; height:40vh; width:80vw">
-                    <canvas id="chart"></canvas>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+{% extends "dashboard.html" %}
+{% block content %}
+    <section id="middle">
+        <div id="content" class="dashboard padding-20">
+
         </div>
-    </div>
-</div>
+    </section>
+{% endblock %}
 
 {% block scripts %}
-    <script type="text/javascript" src="/static/pochi/js/daily.js"></script>
+
 {% endblock %}
