--- a/fimco/pochi/templates/rate.html
+++ b/fimco/pochi/templates/rate.html
@@ -1,17 +1,13 @@
-<div class="modal fade" id="ratesModal" tabindex="-1" role="dialog" aria-labelledby="ratesModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">&times;</button>
-                <h4 class="modal-title">My Balance</h4>
-            </div>
-            <div class="modal-body">
-                <p>Tshs. 3,500,000</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+{% extends "dashboard.html" %}
+{% block content %}
+    <section id="middle">
+        <div id="content" class="dashboard padding-20">
+
         </div>
-    </div>
-</div>
+    </section>
+{% endblock %}
+
+{% block scripts %}
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+    <script type="text/javascript" src="/static/pochi/js/daily.js"></script>
+{% endblock %}
