Updated Market info

--- a/fimco/pochi/templates/dashboard.html
+++ b/fimco/pochi/templates/dashboard.html
@@ -55,8 +55,7 @@
 						</li>
 						<li>
 							<a href="{% url 'exchange' %}">
-								<i class="main-icon fa fa-exchange"></i>
-								<span class="label label-danger pull-right">PRO</span> <span>Exchange Rates</span>
+								<i class="main-icon fa fa-exchange"></i> <span>Exchange Rates</span>
 							</a>
 						</li>
                         <li>
