--- a/fimco/pochi/static/pochi/css/interests.css
+++ b/fimco/pochi/static/pochi/css/interests.css
@@ -26,3 +26,289 @@ ul.rates li {
   cursor: pointer;
   border-radius: 3px;
 }
+
+table {
+  margin: 20px 0;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ddd;
+  border-spacing: 0;
+  font: 400 1.4rem 'Open Sans', sans-serif;
+}
+
+caption{
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+tr:first-child th {
+  font: 400 1.4rem 'Open Sans', sans-serif !important;
+  text-transform: uppercase;
+}
+
+th, td {
+  color: #002A54;
+  padding: 20px 15px;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  text-align: center;
+}
+
+th:last-child, td:last-child {
+  border-right: none;
+}
+tr:last-child td, tr:last-child th {
+  border-bottom:none;
+}
+
+th {
+  background: #efefef;
+  font: 600 1.4rem 'Open Sans', sans-serif;
+}
+
+p{
+  color: #002A54;
+}
+
+/* The surrounding box */
+.layout-box {
+  position: relative;
+  margin: 3% auto 0;
+  width: 70%;
+  /*height: 600px;*/
+  /*perspective: 10000;*/
+  transform-style: preserve-3d;
+  min-width: 950px;
+  overflow: visible;
+  /*transition: width 0.2s height 0.2s;*/
+}
+
+/* The front and the backside and the little tables */
+.front, .responsive-tables [class*="little"] {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  transition: transform 0.7s; /* How long should the flipping be? */
+  transform-origin: 50% 50%;
+  background: #fff;
+  border-radius: 5px;
+}
+.responsive-tables [class*="little"] {
+  width: 48%;
+}
+
+.responsive-tables {
+  display: none;
+  width: 100%;
+  height: 100%;
+}
+
+/* 3states of the little tables  */
+.responsive-tables [class*="little"] {
+  transform: rotateY(0deg) translateX(250%);
+  transform-origin: 0 0;
+  transition: transform 0.6s, opacity 0.0s 0.4s;
+  opacity: 0.0;
+}
+
+.layout-box [class*="little"].active {
+  transform: rotateY(0) translateX(0);
+  transition: transform 0.6s;
+  opacity: 1;
+}
+.layout-box [class*="little"].activetwo {
+  transform: rotateY(0) translateX(106%);
+  transition: transform 0.6s;
+  opacity: 1;
+}
+.layout-box [class*="little"].last {
+  transform: rotateY(0) translateX(-110%);
+  opacity: 0.0;
+}
+
+.price {
+  font: 600 1.4rem 'Open Sans', sans-serif;
+  padding-left: 40px;
+}
+
+h2 {
+  margin-top: 40px;
+}
+
+/* The buttons */
+.responsive-tables button.next-table {
+  right: -3%;
+  border-radius: 50% 0 0 50%;
+}
+.responsive-tables button.prev-table {
+  left: -3%;
+  border-radius: 0 50% 50% 0;
+}
+.responsive-tables button.next-table, .responsive-tables button.prev-table {
+  position: absolute;
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -25px;
+  background: #CE2020;
+  border: none;
+  color: #fff;
+  font-size: 2.5rem;
+  padding: 0;
+  z-index: 99;
+}
+
+@media only screen and (max-width : 1024px) {
+  /* The surrounding box */
+  .layout-box {
+    position: relative;
+    margin: 3% auto 0;
+    width: 70%;
+    height: 500px;
+    /*perspective: 10000;*/
+    transform-style: preserve-3d;
+    min-width: 0;
+    overflow: hidden;
+    /*transition: width 0.2s height 0.2s;*/
+  }
+
+  /* The front and the little tables */
+  .front, .responsive-tables [class*="little"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+    transition: transform 0.7s; /* How long should the flipping be? */
+    transform-origin: 50% 50%;
+    background: #fff;
+    border-radius: 5px;
+  }
+  .responsive-tables [class*="little"] {
+    width: 47%;
+  }
+
+  .responsive-tables {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+  .front {
+    display: none;
+  }
+
+  /* 3states of the little tables  */
+  .responsive-tables [class*="little"] {
+    transform: rotateY(0deg) translateX(250%);
+    transform-origin: 0 0;
+    transition: transform 0.6s, opacity 0.0s 0.4s;
+    opacity: 0.0;
+  }
+
+  [class*="little"].active {
+    transform: rotateY(0) translateX(0);
+    transition: transform 0.6s;
+    opacity: 1;
+  }
+  [class*="little"].activetwo {
+    transform: rotateY(0) translateX(112.7659574%);
+    transition: transform 0.6s;
+    opacity: 1;
+  }
+  [class*="little"].last {
+    transform: rotateY(0) translateX(-110%);
+    opacity: 0.0;
+  }
+}
+
+@media only screen and (max-width : 768px) {
+  .layout-box {
+    width: 90%;
+    min-width: 0;
+  }
+  @media only screen and (max-width: 533px) {
+
+    .layout-box {
+      position: relative;
+      margin: 3% auto 0;
+      width: 80%;
+      height: 400px;
+      /*perspective: 10000;*/
+      transform-style: preserve-3d;
+      min-width: 0;
+      overflow: hidden;
+      /*transition: width 0.2s height 0.2s;*/
+    }
+
+
+    /* The front and the backside and the little tables */
+    .front, .responsive-tables [class*="little"] {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      transform-style: preserve-3d;
+      transition: transform 0.7s; /* How long should the flipping be? */
+      transform-origin: 50% 50%;
+      background: #fff;
+      border-radius: 5px;
+    }
+
+    .responsive-tables {
+      display: block;
+    }
+
+    .front {
+      display: none;
+    }
+
+    /* 3states of the little tables  */
+    .responsive-tables [class*="little"] {
+      transform: rotateY(0deg) translateX(150%);
+      transform-origin: 0 0;
+      transition: transform 0.6s, opacity 0.0s 0.4s;
+      opacity: 0.0;
+    }
+
+    [class*="little"].active {
+      transform: rotateY(0) translateX(0);
+      transition: transform 0.6s;
+      opacity: 1;
+    }
+    [class*="little"].activetwo {
+      transform: rotateY(0) translateX(110%);
+      transition: transform 0.6s;
+      opacity: 1;
+    }
+    [class*="little"].last {
+      transform: rotateY(0) translateX(-110%);
+      opacity: 0.0;
+    }
+  }
+}
+
+/*@media screen and (max-width: 580px) {*/
+  /*.table {*/
+    /*display: block;*/
+  /*}*/
+  /*.th {*/
+    /*padding: 8px 0;*/
+    /*display: block;*/
+  /*}*/
+  /*.cell {*/
+    /*padding: 2px 12px;*/
+    /*display: block;*/
+  /*}*/
+/*}*/
