--- a/fimco/pochi/templates/interests.html
+++ b/fimco/pochi/templates/interests.html
@@ -8,20 +8,24 @@
             <div class="row">
                 <div class="col-md-3">
                     <ul class="rates">
-                        <li>Overnight Rates</li>
-                        <li>T-Bill Rates</li>
-                        <li>T-Bond Rates</li>
-                        <li>USD LIBOR Rates</li>
+                        <li><a data-name="interests" id="interests">All Rates</a></li>
+                        <li><a data-name="overnight" id="overnight">Overnight Rates</a></li>
+                        <li><a data-name="T-Bill" id="bills">T-Bill Rates</a></li>
+                        <li><a data-name="T-Bond" id="bonds">T-Bond Rates</a></li>
+                        <li><a data-name="USD-LIBOR" id="libor">USD LIBOR Rates</a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="col-md-9">
-
+                <div class="col-md-9">
+                    <div class="content">
+                        {% include 'all_rates.html' %}
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 {% endblock %}
 
 {% block scripts %}
-
+     <script type="text/javascript" src="/static/pochi/js/rates.js"></script>
+     <script type="text/javascript" src="/static/pochi/js/ajax.js"></script>
 {% endblock %}
