--- a/fimco/pochi/templates/markets.html
+++ b/fimco/pochi/templates/markets.html
@@ -1,4 +1,7 @@
 {% extends "dashboard.html" %}
+{% block links %}
+    <link href="/static/pochi/css/home.css" rel="stylesheet" type="text/css" />
+{% endblock %}
 {% block content %}
     <section id="middle">
         <div id="content" class="dashboard padding-20">
@@ -9,51 +12,51 @@
                         <!-- POST ITEM -->
                         <div class="blog-post-item">
                             <!-- OWL SLIDER -->
-                            <div class="owl-carousel buttons-autohide controlls-over" data-plugin-options='{"items": 1, "autoPlay": 3000, "autoHeight": false, "navigation": true, "pagination": true, "transitionStyle":"fadeUp", "progressBar":"false"}'>
+                            <div class="owl-carousel buttons-autohide controlls-over"
+                                 data-plugin-options='{"items": 1, "autoPlay": 3000, "autoHeight": false, "navigation": true, "pagination": true, "transitionStyle":"fadeUp", "progressBar":"false"}'>
                                 <div>
-                                    <img class="img-fluid" src="demo_files/images/content_slider/23-min.jpg" alt="">
+                                    <img class="img-fluid" src="" alt="">
                                 </div>
                                 <div>
-                                    <img class="img-fluid" src="demo_files/images/content_slider/21-min.jpg" alt="">
+                                    <img class="img-fluid" src="" alt="">
                                 </div>
                                 <div>
-                                    <img class="img-fluid" src="demo_files/images/content_slider/3-min.jpg" alt="">
+                                    <img class="img-fluid" src="" alt="">
                                 </div>
                             </div>
                             <!-- /OWL SLIDER -->
-                            <h2><a href="blog-single-default.html">BLOG CAROUSEL POST</a></h2>
+                            <h2><a href="">MARKET NEWS</a></h2>
                             <ul class="blog-post-info list-inline">
                                 <li>
                                     <a href="#">
-                                        <i class="fa fa-clock-o"></i>
-                                        <span class="font-lato">June 29, 2017</span>
+{#                                        <i class="fa fa-clock-o"></i>#}
+                                        <span class="font-lato"></span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <i class="fa fa-comment-o"></i>
-                                        <span class="font-lato">28 Comments</span>
+{#                                        <i class="fa fa-comment-o"></i>#}
+                                        <span class="font-lato"></span>
                                     </a>
                                 </li>
                                 <li>
-                                    <i class="fa fa-folder-open-o"></i>
-
+{#                                    <i class="fa fa-folder-open-o"></i>#}
                                     <a class="category" href="#">
-                                        <span class="font-lato">Design</span>
+                                        <span class="font-lato"></span>
                                     </a>
                                     <a class="category" href="#">
-                                        <span class="font-lato">Photography</span>
+                                        <span class="font-lato"></span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <i class="fa fa-user"></i>
-                                        <span class="font-lato">John Doe</span>
+{#                                        <i class="fa fa-user"></i>#}
+                                        <span class="font-lato"></span>
                                     </a>
                                 </li>
                             </ul>
                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                            <a href="blog-single-default.html" class="btn btn-reveal btn-default">
+                            <a href="" class="btn btn-reveal btn-default">
                                 <i class="fa fa-plus"></i>
                                 <span>Read More</span>
                             </a>
@@ -63,41 +66,40 @@
                         <div class="blog-post-item">
                             <!-- IMAGE -->
                             <figure class="mb-20">
-                                <img class="img-fluid" src="demo_files/images/content_slider/10-min.jpg" alt="">
+                                <img class="img-fluid" src="" alt="">
                             </figure>
-                            <h2><a href="blog-single-default.html">BLOG IMAGE POST</a></h2>
+                            <h2><a href="">FINANCE NEWS</a></h2>
                             <ul class="blog-post-info list-inline">
                                 <li>
                                     <a href="#">
-                                        <i class="fa fa-clock-o"></i>
-                                        <span class="font-lato">June 29, 2017</span>
+{#                                        <i class="fa fa-clock-o"></i>#}
+                                        <span class="font-lato"></span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <i class="fa fa-comment-o"></i>
-                                        <span class="font-lato">28 Comments</span>
+{#                                        <i class="fa fa-comment-o"></i>#}
+                                        <span class="font-lato"></span>
                                     </a>
                                 </li>
                                 <li>
-                                    <i class="fa fa-folder-open-o"></i>
-
+{#                                    <i class="fa fa-folder-open-o"></i>#}
                                     <a class="category" href="#">
-                                        <span class="font-lato">Design</span>
+                                        <span class="font-lato"></span>
                                     </a>
                                     <a class="category" href="#">
-                                        <span class="font-lato">Photography</span>
+                                        <span class="font-lato"></span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <i class="fa fa-user"></i>
-                                        <span class="font-lato">John Doe</span>
+{#                                        <i class="fa fa-user"></i>#}
+                                        <span class="font-lato"></span>
                                     </a>
                                 </li>
                             </ul>
                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                            <a href="blog-single-default.html" class="btn btn-reveal btn-default">
+                            <a href="" class="btn btn-reveal btn-default">
                                 <i class="fa fa-plus"></i>
                                 <span>Read More</span>
                             </a>
@@ -105,133 +107,16 @@
                         <!-- /POST ITEM -->
                         <!-- POST ITEM -->
                         <div class="blog-post-item">
-                            <!-- VIDEO -->
-                            <div class="mb-20">
-                                <div class="embed-responsive embed-responsive-16by9">
-                                    <iframe class="embed-responsive-item" src="http://player.vimeo.com/video/8408210" width="800" height="450"></iframe>
-                                </div>
-                            </div>
-                            <h2><a href="blog-single-default.html">BLOG VIDEO POST</a></h2>
-                            <ul class="blog-post-info list-inline">
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-clock-o"></i>
-                                        <span class="font-lato">June 29, 2017</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-comment-o"></i>
-                                        <span class="font-lato">28 Comments</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <i class="fa fa-folder-open-o"></i>
-                                    <a class="category" href="#">
-                                        <span class="font-lato">Design</span>
-                                    </a>
-                                    <a class="category" href="#">
-                                        <span class="font-lato">Photography</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-user"></i>
-                                        <span class="font-lato">John Doe</span>
-                                    </a>
-                                </li>
-                            </ul>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                            <a href="blog-single-default.html" class="btn btn-reveal btn-default">
-                                <i class="fa fa-plus"></i>
-                                <span>Read More</span>
-                            </a>
-                        </div>
-                        <!-- /POST ITEM -->
-                        <!-- POST ITEM -->
-                        <div class="blog-post-item">
-                            <!-- VIDEO -->
-                            <div class="mb-20">
-                                <iframe width="100%" height="366" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/154936822&color=a94545&auto_play=false&hide_related=false&visual=true"></iframe>
-                            </div>
-                            <h2><a href="blog-single-default.html">BLOG SOUND CLOUD POST</a></h2>
-                            <ul class="blog-post-info list-inline">
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-clock-o"></i>
-                                        <span class="font-lato">June 29, 2017</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-comment-o"></i>
-                                        <span class="font-lato">28 Comments</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <i class="fa fa-folder-open-o"></i>
+                            <h2><a href="">FEATURED HEADLINES</a></h2>
 
-                                    <a class="category" href="#">
-                                        <span class="font-lato">Design</span>
-                                    </a>
-                                    <a class="category" href="#">
-                                        <span class="font-lato">Photography</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-user"></i>
-                                        <span class="font-lato">John Doe</span>
-                                    </a>
-                                </li>
-                            </ul>
                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                            <a href="blog-single-default.html" class="btn btn-reveal btn-default">
+                            <a href="" class="btn btn-reveal btn-default">
                                 <i class="fa fa-plus"></i>
                                 <span>Read More</span>
                             </a>
                         </div>
                         <!-- /POST ITEM -->
-                        <!-- POST ITEM -->
-                        <div class="blog-post-item">
-                            <h2><a href="blog-single-default.html">BLOG SIMPLE POST</a></h2>
-                            <ul class="blog-post-info list-inline">
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-clock-o"></i>
-                                        <span class="font-lato">June 29, 2017</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-comment-o"></i>
-                                        <span class="font-lato">28 Comments</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <i class="fa fa-folder-open-o"></i>
 
-                                    <a class="category" href="#">
-                                        <span class="font-lato">Design</span>
-                                    </a>
-                                    <a class="category" href="#">
-                                        <span class="font-lato">Photography</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-user"></i>
-                                        <span class="font-lato">John Doe</span>
-                                    </a>
-                                </li>
-                            </ul>
-                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                            <a href="blog-single-default.html" class="btn btn-reveal btn-default">
-                                <i class="fa fa-plus"></i>
-                                <span>Read More</span>
-                            </a>
-                        </div>
-                        <!-- /POST ITEM -->
                         <!-- PAGINATION -->
                         <div class="text-right">
                             <!-- Pagination Default -->
@@ -383,10 +268,6 @@
                         <h3 class="hidden-xs-down fs-16 mb-20">TAGS</h3>
                         <div class="hidden-xs-down mb-60">
                             <a class="tag" href="#">
-                                <span class="txt">RESPONSIVE</span>
-                                <span class="num">12</span>
-                            </a>
-                            <a class="tag" href="#">
                                 <span class="txt">CSS</span>
                                 <span class="num">3</span>
                             </a>
@@ -397,14 +278,6 @@
                             <a class="tag" href="#">
                                 <span class="txt">JAVASCRIPT</span>
                                 <span class="num">28</span>
-                            </a>
-                            <a class="tag" href="#">
-                                <span class="txt">DESIGN</span>
-                                <span class="num">6</span>
-                            </a>
-                            <a class="tag" href="#">
-                                <span class="txt">DEVELOPMENT</span>
-                                <span class="num">3</span>
                             </a>
                         </div>
                         <!-- TWIITER WIDGET -->
