--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -32,7 +32,7 @@
 <body class="smoothscroll enable-animation">
 
 {#    {% if user.is_authenticated and not user.is_anonymous %}#}
-{#        {% include "top-bar.html" %}#}
+        {% include "top-bar.html" %}
 {#    {% endif %}#}
 
     <div id="header" class="navbar-toggleable-md sticky clearfix">
