--- a/fimco/pochi/templates/markets.html
+++ b/fimco/pochi/templates/markets.html
@@ -171,12 +171,22 @@
                             <ul class="nav nav-tabs nav-bottom-border nav-justified">
                                 <li class="nav-item">
                                     <a class="nav-item active" href="#tab_1" data-toggle="tab">
-                                        Popular
+                                        Stocks
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-item" href="#tab_2" data-toggle="tab">
-                                        Recent
+                                        Bonds
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-item" href="#tab_3" data-toggle="tab">
+                                        Currencies
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-item" href="#tab_4" data-toggle="tab">
+                                        Commodities
                                     </a>
                                 </li>
                             </ul>
@@ -189,36 +199,36 @@
 
                                     <div class="row tab-post"><!-- post -->
                                         <div class="col-md-3 col-sm-3 col-xs-3">
-                                            <a href="blog-sidebar-left.html">
-                                                <img src="demo_files/images/people/300x300/1-min.jpg" width="50" alt="" />
+                                            <a href="">
+                                                <img src="" width="50" alt="" />
                                             </a>
                                         </div>
                                         <div class="col-md-9 col-sm-9 col-xs-9">
-                                            <a href="blog-sidebar-left.html" class="tab-post-link">Maecenas metus nulla</a>
+                                            <a href="" class="tab-post-link">Maecenas metus nulla</a>
                                             <small>June 29 2014</small>
                                         </div>
                                     </div><!-- /post -->
 
                                     <div class="row tab-post"><!-- post -->
                                         <div class="col-md-3 col-sm-3 col-xs-3">
-                                            <a href="blog-sidebar-left.html">
-                                                <img src="demo_files/images/people/300x300/2-min.jpg" width="50" alt="" />
+                                            <a href="">
+                                                <img src="" width="50" alt="" />
                                             </a>
                                         </div>
                                         <div class="col-md-9 col-sm-9 col-xs-9">
-                                            <a href="blog-sidebar-left.html" class="tab-post-link">Curabitur pellentesque neque eget diam</a>
+                                            <a href="" class="tab-post-link">Curabitur pellentesque neque eget diam</a>
                                             <small>June 29 2014</small>
                                         </div>
                                     </div><!-- /post -->
 
                                     <div class="row tab-post"><!-- post -->
                                         <div class="col-md-3 col-sm-3 col-xs-3">
-                                            <a href="blog-sidebar-left.html">
-                                                <img src="demo_files/images/people/300x300/3-min.jpg" width="50" alt="" />
+                                            <a href="">
+                                                <img src="" width="50" alt="" />
                                             </a>
                                         </div>
                                         <div class="col-md-9 col-sm-9 col-xs-9">
-                                            <a href="blog-sidebar-left.html" class="tab-post-link">Nam et lacus neque. Ut enim massa, sodales</a>
+                                            <a href="" class="tab-post-link">Nam et lacus neque. Ut enim massa, sodales</a>
                                             <small>June 29 2014</small>
                                         </div>
                                     </div><!-- /post -->
@@ -228,19 +238,19 @@
                                 <div id="tab_2" class="tab-pane">
                                     <div class="row tab-post"><!-- post -->
                                         <div class="col-md-3 col-sm-3 col-xs-3">
-                                            <a href="blog-sidebar-left.html">
-                                                <img src="demo_files/images/people/300x300/4-min.jpg" width="50" alt="" />
+                                            <a href="">
+                                                <img src="" width="50" alt="" />
                                             </a>
                                         </div>
                                         <div class="col-md-9 col-sm-9 col-xs-9">
-                                            <a href="blog-sidebar-left.html" class="tab-post-link">Curabitur pellentesque neque eget diam</a>
+                                            <a href="" class="tab-post-link">Curabitur pellentesque neque eget diam</a>
                                             <small>June 29 2014</small>
                                         </div>
                                     </div><!-- /post -->
                                     <div class="row tab-post"><!-- post -->
                                         <div class="col-md-3 col-sm-3 col-xs-3">
-                                            <a href="blog-sidebar-left.html">
-                                                <img src="demo_files/images/people/300x300/5-min.jpg" width="50" alt="" />
+                                            <a href="">
+                                                <img src="" width="50" alt="" />
                                             </a>
                                         </div>
                                         <div class="col-md-9 col-sm-9 col-xs-9">
@@ -250,12 +260,12 @@
                                     </div><!-- /post -->
                                     <div class="row tab-post"><!-- post -->
                                         <div class="col-md-3 col-sm-3 col-xs-3">
-                                            <a href="blog-sidebar-left.html">
-                                                <img src="demo_files/images/people/300x300/6-min.jpg" width="50" alt="" />
+                                            <a href="">
+                                                <img src="" width="50" alt="" />
                                             </a>
                                         </div>
                                         <div class="col-md-9 col-sm-9 col-xs-9">
-                                            <a href="blog-sidebar-left.html" class="tab-post-link">Quisque ut nulla at nunc</a>
+                                            <a href="" class="tab-post-link">Quisque ut nulla at nunc</a>
                                             <small>June 29 2014</small>
                                         </div>
                                     </div><!-- /post -->
