--- a/fimco/fimcosite/templates/index.html
+++ b/fimco/fimcosite/templates/index.html
@@ -5,12 +5,12 @@
 {% endblock %}
 {% block content %}
     <div id="fullpage">
-        <div class="section " id="section0">
+        <div class="section" id="section0">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 center">
                         <h1>INFORM. ADVICE. EXECUTE.</h1>
-                        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
+                        <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h5>
                         <a class="link">See what we can do for you <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
                     </div>
                     <div class="col-sm-6">
@@ -24,7 +24,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <h1>WHY INFORM...</h1>
-                        <h2> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h2>
+                        <h5> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
                         <a class="link">Learn more <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
                     </div>
                     <div class="col-sm-6">
@@ -35,38 +35,53 @@
         </div>
         <div class="section" id="section2">
             <div class="container">
-                <div class="col-sm-6">
-                    <h1>WHERE TO EXECUTE...</h1>
-                    <h2>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
-                    <a class="link">Learn more <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
-                </div>
-                <div class="col-sm-6">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h1>WHAT TO ADVICE...</h1>
+                        <h5> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+                        <a class="link">Learn more <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
+                    </div>
+                    <div class="col-sm-6">
 
+                    </div>
                 </div>
             </div>
+        </div>
+        <div class="section" id="section3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h1>WHERE TO EXECUTE...</h1>
+                        <h5>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h5>
+                        <a class="link">Learn more <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
+                    </div>
+                    <div class="col-sm-6">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section fp-auto-height" id="section4">
+            <footer>
+                <div class="copyright">
+                    <div class="container">
+                        <h5 class="float-left m-0 list-inline mobile-block">FIMCO is an authorised financial services provider</h5>
+                        <ul class="float-right m-0 list-inline mobile-block">
+                            <li><a href="#">Terms &amp; Conditions</a></li>
+                            <li>&bull;</li>
+                            <li><a href="#">Privacy</a></li>
+                        </ul>
+                        &copy; All Rights Reserved, FIMCO
+                    </div>
+                </div>
+            </footer>
         </div>
     </div>
-    <!-- FOOTER -->
-    <footer id="footer" class="sticky">
-        <div class="copyright">
-            <div class="container">
-                <ul class="float-right m-0 list-inline mobile-block">
-                    <li><a href="#">Terms &amp; Conditions</a></li>
-                    <li>&bull;</li>
-                    <li><a href="#">Privacy</a></li>
-                </ul>
-
-                &copy; All Rights Reserved, Company LTD
-            </div>
-        </div>
-
-    </footer>
-    <!-- /FOOTER -->
 {% endblock %}
 
 
 {% block scripts %}
-    <script type="text/javascript" src="static/js/vendors/scrolloverflow.min.js"></script>
-	<script type="text/javascript" src="static/js/vendors/jquery.fullPage.min.js"></script>
-	<script type="text/javascript" src="static/js/index.js"></script>
+    <script type="text/javascript" src="/static/js/vendors/scrolloverflow.min.js"></script>
+	<script type="text/javascript" src="/static/js/vendors/jquery.fullPage.min.js"></script>
+	<script type="text/javascript" src="/static/js/index.js"></script>
 {% endblock %}
