New v2 fimco site

--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -31,6 +31,7 @@
 
         <!-- PAGE LEVEL SCRIPTS -->
         <link href="/static/css/header-1.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
 
         {% block links %}
         {% endblock %}
