--- a/fimco/fimcosite/templates/registration.html
+++ b/fimco/fimcosite/templates/registration.html
@@ -105,18 +105,18 @@
                                         </label>
                                     </div>
                                 </div>
-{#                                <hr />#}
+                                <hr />
                             </fieldset>
                             <fieldset id="two">
                                 <div class="row">
                                     <div class="col-md-6 col-sm-6">
                                         <label>Select ID type <small>(required)</small></label>
                                         <label class="select mb-10 mt-20">
-                                            {{ rForm.id_choice }}
                                             <i class="ico-append fa fa-id-card"></i>
+                                            {{ rForm.id_choice }}
                                         </label>
                                     </div>
-                                    <div class="col-md-6 col-sm-6">
+                                    <div class="col-md-6 col-sm-6" id="client_input">
                                         <label for="register:id">Client ID <small>(required)</small></label>
                                         <label class="input mb-10">
                                             <i class="ico-append fa fa-id-card-o"></i>
